이미지를 교체하고, 안철수 데이터를 추가했다.

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -3,5 +3,13 @@
 }
 
 .padding-5{
-    padding: 10vw;
+    padding: 5vw;
+}
+
+.selected{
+    font-weight: bold;
+}
+
+.highlight{
+    background-color: white;
 }
