모바일에서도 볼 수 있게 수정한다.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,10 +28,12 @@
   <body>
 
       {% raw %}
-
-      <div layout="column" layout-fill>
+    <md-content>
+        <div layout="column" layout-fill>
           <div ng-view layout="column" flex scroll-y></div>
       </div>
+      </md-content>
+
 
     {% endraw %}
 
